[tool.poetry]
name = "wheatbot"
version = "0.1.0"
description = "Hierarchical reinforcement learning environment based on Minecraft"
authors = ["jfurches <jim.furches@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "wheatbot"}]

[tool.poetry.dependencies]
python = "~3.10"
gymnasium = "^0.26.3"
pygame = "^2.2.0"
numpy = "^1.24.2"
ray = "^2.3.0"
scipy = "^1.10.1"
Pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"